test/lhsTypeAnnotation3.slq

def main(){
	x:ğ”¹^3:=[1,0,1]:ğ”¹[]; // error
	return x;
}
